# quantum-humanity

./: .env  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  USO_JURIDICO.md  advanced_client.py  audit_report.txt  baseline_log_technical.txt  boveda_autor.py  captura.aee  captura.har  certificado_autoria.aee  certificado_evidencia.json  certificado_manifiesto.aee  certificado_verificacion_20251227_042606.txt  certificado_verificacion_20251227_050717.txt  certificar_evidencia_aee.py  debug_api_keys.py  deepkoder.py  diagnose_fpr.py  diagnostico.ps1  dictamen_ia_guardia.json  docker-compose.yml  ejemplo_forense.py  evidencia.har  evidencia.har.txt  evidencia_fallo_retiro.aee  evidencia_fallo_retiro.har  evidencia_forense.aee  evidencia_test.txt  (+42 more)
aee/: .dockerignore  .gitignore  Dockerfile  FINAL_SECURITY_REPORT.md  README.md  RELEASE_NOTES_v2.1.md  SISTEMA_ONLINE.md  SPECIFICATION.md  __init__.py  certificate.py  core.py  core_backup.py  core_old.py  database.py  docker-compose.yml  notario_pqc.py  pqc_hybrid.py  protocol.py  report_generator.py  requirements.txt  telegram_bot.py  test_bot_async.py  test_bot_connection.py  verificador_aee.py
aee_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aeeprotocol/: __init__.py
archive/: check_master.py
certificates/: .gitkeep
examples/: aee_api.py  aee_demo_simplified.py  auditor_test.py  basic_usage.py  check_security.py  check_setup.py  debug_threshold.py  final_security_check.py  kyber_aee_demo.py  kyber_real.py  torture_test_noise.py
scripts/: install_dev.py
src/: AEEv8.py
templates/: report_template.html
tests/: test_aee.py  test_basic.py  test_core_math.py  (+2 more)
(+29 files in other folders)
